Changed images and dummy text

--- a/views/index.erb
+++ b/views/index.erb
@@ -90,7 +90,7 @@
 
             <div class="about-content">
                 <div class="about-text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ipsam, nisi impedit ipsum repudiandae minima asperiores placeat provident in molestias repellat ut vero quibusdam veniam! Eius error earum asperiores dolorem!Atque itaque sunt, fugit modi, assumenda amet similique delectus, quam possimus natus blanditiis ad quibusdam accusantium porro consequuntur. In, nostrum esse. Vitae voluptatibus unde quia cum suscipit recusandae atque eius.</p>
+                    <p>In 1987, Friendly Bakery opened its first location on a quiet street corner in Islip Terrace, New York. From its inception, Friendly Bakery has been cherished for its classic American baked goods, vintage decor and warm, inviting atmosphere. Today, Friendly Bakery can be found in several locations such as: New York City, Los Angeles, Chicago, Boston, Washington, D.C., Mexico City, Seoul, Dubai, Riyadh, Amman, Abu Dhabi, Manila and Doha.</p>
                 </div>
                 <div class="about-image">
                 </div>
@@ -118,7 +118,7 @@
 
                                     <div class="test-image-text">
                                         <blockquote>
-                                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus debitis pariatur dolores aliquid repudiandae animi natus reprehenderit distinctio, ab obcaecati at reiciendis, et incidunt ad saepe facere recusandae accusantium?"
+                                            "I always love coming into this bakery on a quiet Saturday morning. The employees are always so kind and friendly, and their cupcakes are divine!"
                                         </blockquote>
                                     </div>
                                 </div>
@@ -132,7 +132,7 @@
 
                                     <div class="test-image-text">
                                         <blockquote>
-                                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus debitis pariatur dolores aliquid repudiandae animi natus reprehenderit distinctio, ab obcaecati at reiciendis, et incidunt ad saepe facere recusandae accusantium?"
+                                            "Friendly bakery has some of the best bread you could imagine. Everyday they have fresh bread and prepare the cutest macaroons. I would recommend them to anyone who loves baked goods."
                                         </blockquote>
                                     </div>
                                 </div>
@@ -146,7 +146,7 @@
 
                                     <div class="test-image-text">
                                         <blockquote>
-                                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus debitis pariatur dolores aliquid repudiandae animi natus reprehenderit distinctio, ab obcaecati at reiciendis, et incidunt ad saepe facere recusandae accusantium?"
+                                            "Why do I come here everyday? Well, why wouldn't you? Friendly bakery just has everything you could ever want in a bakery and the employees and management are great!"
                                         </blockquote>
                                     </div>
                                 </div>
@@ -267,10 +267,10 @@
                 <div class="product">
                     <div class="prod-image">
                         <p class="prod-price">$25</p>
-                        <img src="images/bread-food-olives-62313.jpg" alt="cupake image 2">
+                        <img src="images/louise-lyshoj-785186-unsplash.jpg" alt="cupake image 2">
                     </div>
                     <div class="prod-descript">
-                        <h3>Regular Bread</h3>
+                        <h3>Awesome Bread</h3>
                         <div class="prod-btns">
                             <button class="btn-1">Add To Cart</button>
                             <button class="btn-2">Recipe</button>
@@ -280,10 +280,10 @@
                 <div class="product">
                     <div class="prod-image">
                         <p class="prod-price">$25</p>
-                        <img src="images/bread-food-olives-62313.jpg" alt="cupake image 3">
+                        <img src="images/helena-yankovska-408202-unsplash.jpg" alt="cupake image 3">
                     </div>
                     <div class="prod-descript">
-                        <h3>Regular Bread</h3>
+                        <h3>Sliced Bread</h3>
                         <div class="prod-btns">
                             <button class="btn-1">Add To Cart</button>
                             <button class="btn-2">Recipe</button>
@@ -293,10 +293,10 @@
                 <div class="product">
                     <div class="prod-image">
                         <p class="prod-price">$25</p>
-                        <img src="images/bread-food-olives-62313.jpg" alt="cupake image 1">
+                        <img src="images/rodolfo-marques-772228-unsplash.jpg" alt="cupake image 1">
                     </div>
                     <div class="prod-descript">
-                        <h3>Regular Bread</h3>
+                        <h3>Baguette</h3>
                         <div class="prod-btns">
                             <button class="btn-1">Add To Cart</button>
                             <button class="btn-2">Recipe</button>
@@ -337,7 +337,7 @@
                 <div class="product">
                     <div class="prod-image">
                         <p class="prod-price">$25</p>
-                        <img src="images/holly-stratton-575383-unsplash.jpg" alt="cupake image 2">
+                        <img src="images/hello-i-m-nik-699378-unsplash.jpg" alt="cupake image 2">
                     </div>
                     <div class="prod-descript">
                         <h3>Colored Macaroons</h3>
@@ -350,7 +350,7 @@
                 <div class="product">
                     <div class="prod-image">
                         <p class="prod-price">$25</p>
-                        <img src="images/holly-stratton-575383-unsplash.jpg" alt="cupake image 3">
+                        <img src="images/eaters-collective-219711-unsplash.jpg" alt="cupake image 3">
                     </div>
                     <div class="prod-descript">
                         <h3>Colored Macaroons</h3>
@@ -363,7 +363,7 @@
                 <div class="product">
                     <div class="prod-image">
                         <p class="prod-price">$25</p>
-                        <img src="images/holly-stratton-575383-unsplash.jpg" alt="cupake image 1">
+                        <img src="images/keila-hotzel-227554-unsplash.jpg" alt="cupake image 1">
                     </div>
                     <div class="prod-descript">
                         <h3>Colored Macaroons</h3>
@@ -407,7 +407,7 @@
                 <div class="product">
                     <div class="prod-image">
                         <p class="prod-price">$25</p>
-                        <img src="images/rawpixel-778734-unsplash.jpg" alt="cupake image 2">
+                        <img src="images/gades-photography-711077-unsplash.jpg" alt="cupake image 2">
                     </div>
                     <div class="prod-descript">
                         <h3>Awesome Cake</h3>
@@ -420,7 +420,7 @@
                 <div class="product">
                     <div class="prod-image">
                         <p class="prod-price">$25</p>
-                        <img src="images/rawpixel-778734-unsplash.jpg" alt="cupake image 3">
+                        <img src="images/jason-leung-794326-unsplash.jpg" alt="cupake image 3">
                     </div>
                     <div class="prod-descript">
                         <h3>Awesome Cake</h3>
@@ -433,7 +433,7 @@
                 <div class="product">
                     <div class="prod-image">
                         <p class="prod-price">$25</p>
-                        <img src="images/rawpixel-778734-unsplash.jpg" alt="cupake image 1">
+                        <img src="images/thomas-william-651493-unsplash.jpg" alt="cupake image 1">
                     </div>
                     <div class="prod-descript">
                         <h3>Awesome Cake</h3>
